--- a/src/app/tab4/tab4.component.html
+++ b/src/app/tab4/tab4.component.html
@@ -1,3 +1,7 @@
-<p>
-  tab4 works!
-</p>
+<ion-header>
+    <ion-toolbar>
+      <ion-title>
+        User Details
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
