--- a/src/app/forgotpwd/forgotpwd.component.html
+++ b/src/app/forgotpwd/forgotpwd.component.html
@@ -1,36 +1,20 @@
 <ion-header>
-    <ion-toolbar>
-      
-        <ion-icon name="arrow-round-back" (click)="onBack()" style="font-size:28px;font-weight:bold;"></ion-icon>
-        <ion-title>Forgot Password</ion-title>
-    
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content>
-      
-          <ion-row justify-content-center>
-           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-              <div padding>
-      
-          <ion-item>
-            <ion-label position="floating">Enter Registered Email</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-card>
-          <ion-item>
-             
-              <ion-input type="text" placeholder="Enter OTP"></ion-input>
-            </ion-item>
-          </ion-card>
-        
-        <div padding>
-            
-              <ion-button color="success" (click)="onVerify()">Verify</ion-button>
-              </div>
-              </div>
-              </ion-col>
-              </ion-row>
-              
-          </ion-content>
-  
+  <ion-toolbar>
+    <ion-icon name="arrow-round-back" (click)="onBack()" style="font-size:28px;font-weight:bold;"></ion-icon>
+    <ion-title>Forgot Password</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-card>
+    <ion-card-content>
+
+      <ion-item>
+        <ion-label position="floating">Enter Registered Mobile Number</ion-label>
+        <ion-input type='text' [(ngModel)]='customer.phone'> </ion-input>
+      </ion-item>
+      <ion-button color="success" (click)='reset(customer)'>Verify</ion-button><br>
+      Dont have account ? <a (click)='register()'> Sign Up </a>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
