--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -30,6 +30,12 @@ ion-title{
 ion-button{
   color: black;
 }
+ion-label{
+  color:black;
+}
+ion-button{
+  color: black;
+}
 
 @media (min-width: 240px) and (max-width: 768px) {
   
