--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,58 +1,16 @@
-// ion-content {
-//     --background: url('src/assets/bg.jpg')no-repeat center center fixed; 
-//     -webkit-background-size: cover;
-//     -moz-background-size: cover;
-//     background-size: cover;;
-  
-//   }
-// //   ion-toolbar{
-// //       --background :lightseagreen;
-// //   }
-// //   ion-input{
-// //     --placeholder-color:blue; 
-// //     // --placeholder-font-weight:bold;
-    
-// //   }
-
-
 ion-toolbar{
     --background :rgb(246, 250, 8);
-}
-ion-input{
-  --placeholder-color:blue; 
-  // --placeholder-font-weight:bold;
-  
 }
 ion-title{
   text-align: center;
 }
-
-
-
-ion-grid {
-  width:100%;
-  height: 100%;
-  background: rgb(246, 246, 246);
-}
-
-ion-row {
-  height: 100%;
-}
-a{
-   align-items: center;
-    cursor: pointer;
-    
-    // margin-left: 15px;
-}
-
-ion-col {
-//   border: 1px solid #488aff;
-//   background:green;
+ion-icon{
+  margin-left: 50px;
+  margin-top: 10px;
 }
 ion-button {
  text-align: center;
-//  padding: 10px;
-  width:40%;
+ width:40%;
   margin-left: 20px;                                                                                                      
 }
 
