--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,15 +7,15 @@
 </ion-header>
 
 <ion-content>
-    <ion-title>Pull To Refresh</ion-title>
+    
     <ion-tabs>
         
         <ion-tab-bar slot="top">
-          <ion-tab-button tab="tab1" style="border-right: 1px #000 solid;" >
+          <ion-tab-button tab="tab3" style="border-right: 1px #000 solid;" >
             <ion-label>Completed</ion-label>
           </ion-tab-button>
           
-          <ion-tab-button tab="tab2">
+          <ion-tab-button tab="tab3">
               <ion-label>Cancelled</ion-label>
             </ion-tab-button>
           </ion-tab-bar>
@@ -23,5 +23,5 @@
           
 
 </ion-content>
- <ion-button shape="round" color="medium" fill="outline">Show Bookings</ion-button>
+ <ion-button shape="round" color="medium" expand="full" fill="outline">Show Bookings</ion-button>
 
