--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,13 +18,14 @@
   
   <ion-card>
       <a href="https://www.facebook.com/">
-      <ion-icon name="logo-facebook" style="font-size:55px;color:blue"></ion-icon></a>
+      <ion-icon name="logo-facebook" style="font-size:45px;color:blue"></ion-icon></a>
       <a href="https://www.youtube.com/"> 
-      <ion-icon name="logo-youtube" style="font-size:50px;color:red"></ion-icon></a>
-      <a href="https://twitter.com/"><i class="fa fa-twitter" style="margin-left:60px;font-size:50px;color:blue" aria-hidden="true"></i></a>
+      <ion-icon name="logo-youtube" style="font-size:45px;color:red"></ion-icon></a>
+      <a href="https://twitter.com/">
+        <ion-icon name="logo-twitter" style="font-size:45px;color:skyblue"></ion-icon></a>
       <div padding>
-      <ion-button size="large" shape="round" color="primary" (click)="onSignup()">SIGN UP</ion-button>
-      <ion-button size="large" shape="round" color="success" (click)="onSignin()">SIGN IN</ion-button>
+      <ion-button shape="round"   fill="outline" color="primary" (click)="onSignup()">SIGN UP</ion-button>
+      <ion-button shape="round"   fill="outline"color="success" (click)="onSignin()">SIGN IN</ion-button>
 </div>
   </ion-card>
 </ion-content>
