--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,30 +1,52 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon name="arrow-round-back" (click)="onBack()" style="font-size:28px;font-weight:bold;"></ion-icon>
-        <ion-title>Booking</ion-title>
+    <ion-icon name="arrow-back" (click)="onBack()"></ion-icon>
+    <ion-title>Booking</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card>
-      <ion-img  src="{{movie.image_url}}"></ion-img><br>
-      <ion-item>
-        
-          <ion-icon name="film"></ion-icon><ion-input [(ngModel)]="movie.name" readonly></ion-input>
+  <ion-card>
+    <ion-img src="{{movie.image_url}}"></ion-img><br>
+    <ion-item>
+      <ion-icon name="film"></ion-icon>
+      <ion-input [(ngModel)]="movie.name" readonly></ion-input>
+    </ion-item>
+  </ion-card>
+  <ion-card>
+    <ion-item>
+      <ion-label>No.of Tickets</ion-label>
+      <ion-select value="brown" okText="Okay" cancelText="Dismiss">
+        <ion-select-option value="brown">1</ion-select-option>
+        <ion-select-option value="blonde">2</ion-select-option>
+        <ion-select-option value="black">3</ion-select-option>
+        <ion-select-option value="red">4</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+        <ion-label>Date</ion-label>
+        <ion-datetime display-format="MMM DD, YYYY HH:mm"></ion-datetime>
       </ion-item>
-    </ion-card>
-    <ion-card>
+    <ion-item>
+        <ion-label>Theatre</ion-label>
+        <ion-select value="brown" okText="Okay" cancelText="Dismiss">
+          <ion-select-option value="brown">Krishna Theatre</ion-select-option>
+          <ion-select-option value="blonde">Sandhya Digital 4K Theatre</ion-select-option>
+          <ion-select-option value="black">Anjan Cinemas</ion-select-option>
+          <ion-select-option value="red">PVR Complex</ion-select-option>
+        </ion-select>
+      </ion-item>
       <ion-item>
-          <ion-label position="floating">No. Of Tickets</ion-label>
-          <ion-input [(ngModel)]="data.tickets"></ion-input>
-      </ion-item><br>
-      <div padding>
-      
-      <ion-button color="success"  routerLink="/payment"  (click)="addBooking()">Book Ticket</ion-button>
+          <ion-label>Screens</ion-label>
+          <ion-select value="brown" okText="Okay" cancelText="Dismiss">
+            <ion-select-option value="brown">1</ion-select-option>
+            <ion-select-option value="blonde">2</ion-select-option>
+            <ion-select-option value="black">3</ion-select-option>
+            <ion-select-option value="red">4</ion-select-option>
+          </ion-select>
+        </ion-item>
+    <div padding>
+      <ion-button color="success" routerLink="/payment" (click)="addBooking()">Book Ticket</ion-button>
     </div>
-    </ion-card>
-  </ion-content>
-  
-
-
-  
+  </ion-card>
+</ion-content>
