--- a/src/app/forgotpwd/forgotpwd.component.html
+++ b/src/app/forgotpwd/forgotpwd.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon name="arrow-round-back" (click)="onBack()" style="font-size:28px;font-weight:bold;"></ion-icon>
+      <ion-icon name="arrow-back"  (click)="onBack()"></ion-icon>
     <ion-title>Forgot Password</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,7 +13,7 @@
         <ion-label position="floating">Enter Registered Mobile Number</ion-label>
         <ion-input type='text' [(ngModel)]='customer.phone'> </ion-input>
       </ion-item>
-      <ion-button color="success" (click)='reset(customer)'>Verify</ion-button><br>
+      <ion-button color="success" shape="round" expand="full" (click)='reset(customer)'>Verify</ion-button><br>
       Dont have account ? <a (click)='register()'> Sign Up </a>
     </ion-card-content>
   </ion-card>
