--- a/src/app/forgotpwd/forgotpwd.component.scss
+++ b/src/app/forgotpwd/forgotpwd.component.scss
@@ -1,38 +1,15 @@
 ion-toolbar{
-    --background :rgb(246, 250, 8);
+  --background :rgb(246, 250, 8);
 }
-ion-input{
-  --placeholder-color:blue; 
-  // --placeholder-font-weight:bold;
-  
-}
-a{
-    cursor: pointer;
+ion-title{
+text-align: center;
 }
 
-ion-grid {
-  width:100%;
-  height: 100%;
-  background: rgb(246, 246, 246);
-}
-
-
-ion-row {
-  height: 100%;
-}
-
-ion-col {
-  // border: 1px solid #488aff;
-//   background:green;
-}
-ion-button {
-  margin-left: 80px;  
-  width:50%;                                                                                                      
-}
 
 @media (min-width: 240px) and (max-width: 768px) {
-  
-  ion-col {
-      border: none;
-  }
+
+ion-col {
+    border: none;
 }
+}
+
