--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,5 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon name="arrow-round-back" (click)="onBack()" style="font-size:28px;font-weight:bold;"></ion-icon>
-
     <ion-title>
       <ion-icon name="contact"></ion-icon> New User
     </ion-title>
@@ -12,6 +10,7 @@
 
   <ion-row justify-content-center>
     <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+        <ion-img style="height: 200px;" src='../../assets/h1.jpg'></ion-img>
       <div padding>
         <ion-item>
           <ion-label position="floating">Enter Name</ion-label>
