--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,29 +1,24 @@
-
-
-  ion-toolbar{
-    --background :rgb(246, 250, 8);
+ion-toolbar{
+  --background :rgb(246, 250, 8);
 }
-ion-input{
-  --placeholder-color:blue; 
-  // --placeholder-font-weight:bold;
-  
+ion-title{
+text-align: center;
 }
-a{
-    cursor: pointer;
+ion-icon{
+margin-left: 320px;
+color: red;
+font-size: 25px;
 }
-
-ion-grid {
-  width:100%;
-  height: 100%;
-  background: rgb(246, 246, 246);
+ion-button {
+text-align: center;
+width:40%;
+margin-left: 20px;                                                                                                      
 }
-
-
 
 @media (min-width: 240px) and (max-width: 768px) {
-  
-  ion-col {
-      border: none;
-  }
+
+ion-col {
+    border: none;
+}
 }
 
