--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -30,11 +30,17 @@ ion-title{
 ion-button{
   color: black;
 }
+ion-segment{
+  padding: 4px;
+}
+ion-segment-button{
+  padding: 5px;
+}
 ion-label{
-  color:black;
+  color:blue;
 }
 ion-button{
-  color: black;
+  color:blue;
 }
 
 @media (min-width: 240px) and (max-width: 768px) {
