--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,10 +1,7 @@
 ion-toolbar{
     --background :rgb(246, 250, 8);
 }
-ion-input{
-  --placeholder-color:blue; 
-  
-}
+
 ion-segment-button{
   padding: 5px;
 }
@@ -20,7 +17,7 @@ ion-button{
 
 
 ion-label{
-  color:blue;
+  color:black;
 }
 ion-button{
   color:blue;
