--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,16 +3,21 @@ ion-toolbar{
 }
 ion-title{
   text-align: center;
+  font-size: 20px;
 }
 ion-icon{
+  margin :0 auto;
   margin-left: 50px;
   margin-top: 10px;
 }
 ion-button {
  text-align: center;
- width:40%;
-  margin-left: 20px;                                                                                                      
-}
 
+  margin-left: 25px;                                                                                                      
+}
+ion-content{
+  margin:0 auto;
+  top: 10%;
+}
 
 
