--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,32 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <h2>
-        <ion-icon name="log-in"></ion-icon> Login
-      </h2>
-    </ion-title>
+  <ion-icon name="log-in"></ion-icon> Login
+  </ion-title>
   </ion-toolbar>
 </ion-header>
 
-
-
 <ion-content>
-<ion-row justify-content-center>
-    <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-      <ion-img style="height: 200px;" src='../../assets/h1.jpg'></ion-img>
-      <div padding>
+  <ion-img style="height: 200px;" src='../../assets/h1.jpg'></ion-img>
+  <div padding>
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input [(ngModel)]="customer.email"></ion-input>
+    </ion-item>
 
-        <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <ion-input [(ngModel)]="customer.email"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
-        </ion-item>
-      </div>
-      <div padding>
-        <a routerLink="/forgotpwd">Forgot Password?</a>
-      </div>
-      <div padding>
-        <ion-button color="secondary" size="large" shape="round" (click)="onLogin(customer)">LOGIN</ion-button>
-      </div>
-    </ion-col>
-  </ion-row>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
+    </ion-item>
+    <ion-label>{{message}}</ion-label>
+  </div>
+  <div padding>
+    <a routerLink="/forgotpwd">Forgot Password?</a>
+  </div>
+  
+  <ion-label>{{message1}}</ion-label>
+  <div padding>
+    <ion-button color="secondary" size="large" shape="round" (click)="onLogin(customer)">LOGIN</ion-button>
+  </div>
 
 </ion-content>
